# jaxonomy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAIMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_GAPS.md  LICENSE.md  README.md  SECURITY.md  SKILL.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.docs.txt  requirements.in
.cursor/rules/: index.mdc
.github/workflows/: build-and-publish-docs.yml  release.yml  tests.yml
AGENTS/: CONTEXT.md  DECISIONS.md  PATTERNS.md  README.md  RULES.md
benchmarks/: README.md  acausal_parity_results.json  brusselator.py  compile_time.py  compile_time_baseline.json  memory.py  memory_baseline.json  public.py  public_baseline.json  run_acausal_parity.py
collimator/testing/: __init__.py  markers.py  runtime_test.py  util.py
docs/: CNAME  about.md  benchmarks.md  distributed.md  framework.md  index.md  installation.md  jit_cache.md  library.md  memory.md  optimization.md  simulation.md
docs/examples/: 01_quadcopter_modelling.ipynb  02_quadcopter_trajectory_generation.ipynb  03_quadcopter_nonlinear_mpc.ipynb  04_flip_trajectory_optimization.ipynb  MLP_training.ipynb  actuator_delay_identification.ipynb  aerospace_adcs_ekf_wheels.ipynb  aleatoric_vs_epistemic_uq.ipynb  articulated_quadruped_render.py  artificial_pancreas_mpc.ipynb  battery_pack_10k_scaling.ipynb  battery_pack_thermal.ipynb  battery_part_4_data_driven_models_DMDc.ipynb  battery_part_5_data_driven_models_eDMDc.ipynb  booster_part_2_mpc_and_render.ipynb  booster_part_3_atmosphere_and_phases.ipynb  booster_part_4_high_fidelity_propulsion.ipynb  booster_part_5_sensing_and_estimation.ipynb  bouncing_ball.ipynb  bouncing_ball_stairs_marimo.py  conservation_laws_as_ci.ipynb  container_blocks_tour.ipynb  custom_block_authoring.ipynb  dae_projection_pendulum.ipynb  dashboard_submodel.ipynb  dfig_wind_turbine.ipynb  diagram_visualization.ipynb  differentiable_audio_dsp.ipynb  distributed_ensemble.py  dpc_two_tank_reference_tracking.ipynb  energy_shaping_and_lqr.ipynb  engine_map_fitting_to_mpc.ipynb  f1_part_1_lap_time_simulator.ipynb  f1_part_2_setup_optimization.ipynb  f1_part_3_aero_map_fitting.ipynb  f1_part_4_sobol_cfd_budget.ipynb  f1_part_5_naca_su2_cosim.ipynb  f1_part_6_drivaerml_hero.ipynb  fast_restart_and_batched_sweeps.ipynb  fmi_export_roundtrip.ipynb  (+54 more)
docs/javascripts/: katex.js  mathjax.js
docs/overrides/: main.html
docs/scope/: pinn.md  rom.md
docs/stylesheets/: extra.css
docs/tutorials/: 01-getting-started.ipynb  02-creating-custom-blocks.ipynb  03-creating-custom-acausal-components.ipynb  04-wrappers.ipynb  05-automatic-differentiation-optimization.ipynb  index.md
examples/: distributed_ensemble.py  objectives_example.py
examples/optimization/: confidence_intervals_example.py  multi_start_example.py  sensitivity_example.py
jaxonomy/: __init__.py  _init.py  diagnostics.py  jit_cache.py  lazy_loader.py  logging.py  precision.py  profiling.py  version.py
jaxonomy/acausal/: README.md  __init__.py  acausal_compiler.py  acausal_diagram.py  diagram_processing.py  error.py  run_index_reduction_examples.py  types.py
jaxonomy/backend/: __init__.py  _torch.py  backend.py  ode_solver.py  results_data.py  typing.py  utils.py
jaxonomy/cli/: __init__.py  cli_run.py  jaxonomy_cli.py  model_interface.py  run_fit_sindy.py  run_jaxonomy.py  run_optimization.py  run_variants.py
jaxonomy/control/: __init__.py
jaxonomy/dashboard/: __init__.py  api.py  ensemble.py  model.py  project.py  results.py  schemas.py  uiprops.py  utils.py
jaxonomy/framework/: __init__.py  build_recorder.py  cache.py  containers.py  context.py  context_factory.py  dependency_graph.py  diagram.py  diagram_builder.py  discrete_dependencies.py  error.py  event.py  flatten.py  leaf_system.py  parameter.py  port.py  pprint.py  state.py  state_machine_builder.py  submodel.py  system_base.py  system_decorators.py  unit_propagation.py  units.py  validation.py  variants.py
jaxonomy/mcp/: README.md  __init__.py  _helpers.py  server.py
jaxonomy/models/: __init__.py  acrobot.py  battery_ecm.py  bouncing_ball.py  cartpole.py  compact_ev.py  compass_gait.py  fitzhugh_nagumo.py  hairer.py  lotka_volterra.py  pendulum.py  planar_quadrotor.py  rimless_wheel.py  van_der_pol.py
jaxonomy/optimization/: __init__.py  confidence.py  implicit.py  multi_start.py  objectives.py  parameter_tuning.py  pid_autotuning.py  rl_env.py  sensitivity.py  training.py  ui_jobs.py
jaxonomy/simulation/: __init__.py  autodiff_rules.py  batch.py  cloud_runner.py  dae_drift.py  dae_projection.py  errors.py  event_gradient.py  fast_restart.py  lazy_results.py  provenance.py  rate_groups.py  results_recorder.py  simulate_distributed.py  simulate_variants.py  simulator.py  static_sweep.py  testing_systems.py  types.py  zero_crossing_handler.py
jaxonomy/testing/: __init__.py  markers.py  runtime_test.py  util.py
jaxonomy/uq/: __init__.py  aleatoric_epistemic.py  distributions.py  morris.py  sobol.py  (+2 more)
test/: conftest.py  gen_datasource_csv.py  test_brusselator.py  test_dashboard.py  test_diagnostics.py  test_diagnostics_followups.py  test_dx_followups_batch2.py  test_jaxonomy_improvements.py  test_profiler.py  test_readme_snippets.py  test_top_level_docs.py
(+425 files in other folders)
