[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxonomy"
readme = "README.md"
description = "Jaxonomy core simulation engine and API client"
requires-python = ">=3.10"
authors = [{ name = "Jaxonomy", email = "support@jaxonomy.com" }]
dynamic = ["dependencies"]
license = { text = "MIT" }

# Keep in sync with version.py
version = "3.0.0"

# See https://pypi.org/classifiers/
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://www.jaxonomy.com"
"Documentation" = "https://py.jaxonomy.com"
"Repository" = "https://github.com/machinavitalis/jaxonomy"
"Issues" = "https://github.com/machinavitalis/jaxonomy/issues"
"Changelog" = "https://github.com/machinavitalis/jaxonomy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["jaxonomy.testing*", "test*", "examples*"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.scripts]
jaxonomy_cli = "jaxonomy.cli.jaxonomy_cli:cli"
jaxonomy-mcp = "jaxonomy.mcp.server:main"

[project.optional-dependencies]

mcp = ["mcp>=1.0.0"]

# Optional: pint-backed string parser for jaxonomy.framework.units.parse_unit
# (T-104-followup-pint-bridge). When this extra is installed,
# parse_unit("m/s²") routes through pint's UnitRegistry; otherwise a
# built-in fallback parser handles the curated SI subset.
units = ["pint>=0.20"]

# Optional: streaming export to HDF5 / zarr for LazyResults
# (T-108-followup-streaming-export). ``LazyResults.to_hdf5`` needs
# ``h5py``; ``LazyResults.to_zarr`` needs ``zarr``. Without either, the
# parquet writer / ``collect()`` / ``to_pandas()`` paths continue to
# work unchanged.
streaming-export = ["h5py>=3.0", "zarr>=2.10"]

# Optional: FMU export/import + official validation (T-025/T-026).
# ``build_fmu`` needs pythonfmu; import and ``fmpy.validation.validate_fmu``
# (the T-026c conformance gate) need fmpy.
fmu = ["pythonfmu>=0.6", "fmpy>=0.3.20"]

# Optional: quasi-Monte-Carlo sampling via Sobol low-discrepancy
# sequences (T-126-followup-quasi-mc). ``jaxonomy.uq.quasi_monte_carlo``
# and ``jaxonomy.uq.sobol_sequence`` route through
# ``scipy.stats.qmc.Sobol``. scipy is already a hard runtime dep of the
# core simulator, so this extra mostly exists for documentation /
# discoverability rather than gating an install.
uq-qmc = ["scipy>=1.7"]

# Minimum dependencies to run the pytest suite. Install with `pip install -e .[test]`.
# CI's PR-time job uses this.
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist",
  "pytest-mock",
  "pytest-retry",  # for pytest.mark.flaky
  "pytest-timeout",
  "hypothesis",
  "toml",
  "matplotlib ~= 3.9",
  # Soft deps of library code the fast tier exercises at runtime, where a
  # collection-time importorskip can't intervene: PID / TransferFunction /
  # LTISystem lazily import `control`; DataSource / csv_utils / fmu need pandas.
  "control",
  "pandas ~= 2.2",
]

# Full test matrix — adds every optional runtime extra that has test coverage
# (control, pysindy, pytwin, pandas, tensorflow, torch, mujoco, ...) plus the
# notebook-testing and media-I/O libraries that are test-only. Install with
# `pip install -e .[test-full]`. CI's nightly job uses this.
test-full = [
  "jaxonomy[test,all,recommended]",
  "nbval",
  "gplearn",
  "onnx",
  "onnxruntime",
  "jaxonnxruntime",
  "lightning",
  "mediapy",
  "ipywidgets",
  "ipympl",
]

# NMPC requires IPOPT to be preinstalled and maybe cmake on macOS
nmpc = ["cyipopt ~= 1.3.0", "osqp >=0.6.5,<2"]

# safe is a target for optional dependencies without complex build requirements
# FIXME: torch and tensorflow are not exactly simple, depending on the platform
safe = [
  "control ~= 0.9.4",
  "pandas ~= 2.2",
  "pysindy ~= 1.7.5",
  "pytwin ~= 0.6.0",
  "sympy ~= 1.11.1",
  "tensorflow ~= 2.16.1",
  "torch ~= 2.3",
  "opencv-python-headless",                     # cv2
  "evosax ~= 0.1.6",
  "nlopt ~= 2.7; platform_machine == 'x86_64'",
  "matplotlib ~= 3.9",
]

# all dependencies used by jaxonomy, including NMPC
all = [
  "control ~= 0.9.4",
  "cyipopt ~= 1.3.0",
  "osqp >=0.6.5,<2",
  "pandas ~= 2.2",
  "pysindy ~= 1.7.5",
  "pytwin ~= 0.6.0",
  "sympy ~= 1.11.1",
  "tensorflow ~= 2.16.1",
  "torch ~= 2.3",
  "mujoco",
  "mujoco-mjx",
  "evosax ~= 0.1.6",
  "brax ~= 0.10.4",
  "nlopt ~= 2.7; platform_machine == 'x86_64'",
  "matplotlib ~= 3.9",
  "opencv-python-headless",                     # cv2
]

# These are other libraries included in the environment for
# users' PythonScript blocks, but not directly used by this package
recommended = [
  "casadi ~= 3.6",
  "pybamm ~= 23.9; platform_system == 'Linux'",
  "roboticstoolbox-python ~= 1.1",
  "scikit-learn ~= 1.3",
  "spatialmath-python ~= 1.1",
  "sysidentpy ~= 0.3",
]
